# jira-commit-msg

./: .gitignore  .jira-commit-msg-config.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
.github/workflows/pre-commit-checks/: action.yml
jira_commit_msg/: main.py
